--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-fastapi
-uvicorn
-python-multipart
-aiofiles
+fastapi==0.104.1
+uvicorn==0.15.0
+python-multipart==0.0.6
+aiofiles==23.2.1
+numpy==1.24.3
+torch==2.1.2
+pydantic==2.5.3
+pydantic-settings==2.1.0
+python-jose[cryptography]==3.3.0
